<resources>
    <string name="app_name">JobSpot</string>
    <string name="on_boarding_heading">Provide \nDream Job \nOpportunities!</string>
    <string name="on_boarding_sub_heading">Assist students to get the most exciting job roles based on their interests and study major.</string>

    <string name="role_select_heading">Choose your Role</string>
    <string name="role_select_sub_heading">To help the students to be life ready, not just industry ready. </string>
    <string name="role_admin_heading">Admin</string>
    <string name="role_tpo_heading">Tpo</string>

    <string name="login_fragment_heading">Welcome Back</string>
    <string name="login_fragment_sub_heading">Let’s Login. Fill in your details to apply for jobs!</string>
    <string name="signup_fragment_heading">Create an Account</string>
    <string name="signup_fragment_sub_heading">Let’s Signup. Fill in your details to apply for jobs!</string>
    <string name="forget_pass_fragment_sub_heading">To reset your password, you need your email or mobile number that can be authenticated</string>
    <string name="email_fragment_heading">Check Your Email</string>
    <string name="email_fragment_sub_heading">We have sent the reset password to the email address brandonelouis@gmial.com</string>
    <string name="student_detail_fragment_heading">Add Details</string>
    <string name="fragment_jobs_heading">Jobs</string>
    <string name="fragment_jobs_record_heading">Records</string>
    <string name="fragment_job_detail_heading">Add Job</string>
    <string name="bottom_sheet_heading">Remove Job</string>
    <string name="bottom_sheet_sub_heading">Are you sure you want to delete this job?</string>
    <string name="fragment_mock_test_heading">Create Mock Test</string>
    <string name="fragment_mock_test_sub_heading">Mock Tests</string>
    <string name="field_test_conducted">Test Conducted</string>


    <string name="upload_image">Upload Profile</string>
    <string name="field_username">Username</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_signup">Sign Up</string>
    <string name="field_back_to_login">Back to login</string>
    <string name="field_open_email">Open Your Email</string>
    <string name="field_reset_password">Reset Password</string>
    <string name="field_forgot_password">Forgot Password ?</string>
    <string name="field_tpo_id">TPO ID</string>
    <string name="field_mobile">Mobile</string>
    <string name="field_gender">Gender</string>
    <string name="field_dob">DOB</string>
    <string name="field_next">Next</string>
    <string name="field_qualification">Qualification</string>
    <string name="field_of_study">Stream</string>
    <string name="field_year_experience">Experience</string>
    <string name="field_bio">Biography</string>
    <string name="field_submit">Submit</string>
    <string name="field_search">Search</string>
    <string name="field_upload_company_image">Upload Image</string>
    <string name="field_job_title">Job Title</string>
    <string name="field_company_name">Company Name</string>
    <string name="field_city">City</string>
    <string name="field_salary">Salary</string>
    <string name="field_work_type">Work Type</string>
    <string name="field_job_description">Job Description</string>
    <string name="field_job_responsibilities">Job Responsibilities</string>
    <string name="field_skills">Skills</string>
    <string name="bottom_sheet_button_text">No</string>
    <string name="button_submit_text">Yes</string>
    <string name="field_role">%s</string>
    <string name="field_company_and_location">\u2022 %s \u2022 %s \u2022</string>
    <string name="field_welcome_heading">Hello \n%s</string>
    <string name="field_administer_heading">Administer</string>
    <string name="field_student_card_title">Students</string>
    <string name="field_jobs_card_title">Jobs</string>
    <string name="field_mock_test_card_title">Mock Test</string>
    <string name="field_alert_card_title">Alert</string>
    <string name="field_quiz_title">Quiz Title</string>
    <string name="question_count">Question %d</string>
    <string name="field_remove_mock_heading">Remove Mock</string>
    <string name="field_remove_quiz_sub_heading">Are you sure you want to delete this mock</string>
    <string name="field_remove_quiz_btn">Remove Mock</string>
    <string name="field_quiz_student_count"> %d  students attendant</string>

    <string name="heading_student_applied">Student Applied</string>
    <string name="student_count"> %s </string>
    <string name="header_job_description">Job Description</string>
    <string name="header_salary">Salary</string>
    <string name="header_responsibilities">Responsibilities</string>
    <string name="header_skill_set">Required Skills</string>

    <string name="login_prompt">Already have an account? Login</string>
    <string name="sign_up_prompt">You don\'t have an account yet? Sign up</string>
    <string name="email_resend_prompt">You have not received the email? Resend</string>

    <string name="auth_pass">Authentication Success</string>
    <string name="auth_fail">Authentication Failed</string>
    <string name="move_to_login">You can login now</string>


    <string name="field_error_username">Enter valid username</string>
    <string name="field_error_email">Enter valid email ID</string>
    <string name="field_error_password">Enter valid password</string>
    <string name="field_error_mobile">Enter valid Mobile No.</string>
    <string name="field_error_dob">Enter valid Date</string>
    <string name="field_error_image">Please Select Image</string>
    <string name="field_error_year">Enter valid Experience</string>
    <string name="field_error_bio">Enter valid biography</string>
    <string name="field_error_stream">Enter valid stream</string>
    <string name="reset_pass">Reset Password Send Success</string>
    <string name="field_error_job_title">Enter valid Job title</string>
    <string name="field_error_company_name">Enter valid Company name</string>
    <string name="field_error_city">Enter valid City</string>
    <string name="field_error_salary">Enter valid Salary</string>
    <string name="field_error_description">Enter valid Description</string>

    <string name="reset_fail">Reset Password Failed</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="invalid_user">The specified tpo does not exist</string>
    <string name="network_error">A network error occurred</string>
    <string name="email_exists">"Email already exists"</string>

    <string name="student_address"> %s, %s:%s </string>


    <string name="loading">Loading</string>
    <string name="completed">Done</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="qualification">
        <item>Bachelor</item>
        <item>Diploma</item>
        <item>Masters</item>
        <item>PhD</item>
        <item>Professional Certification</item>
    </string-array>

    <string-array name="workType">
        <item>Internship</item>
        <item>Part Time</item>
        <item>Full Time</item>
    </string-array>

    <string-array name="correctAns">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="designation">
        <item>Support</item>
        <item>Consultant</item>
        <item>Designer</item>
        <item>Developer</item>
        <item>Tester</item>
        <item>HR</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>