<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.auth.fragments.RoleSelectFragment">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/app_name"
        android:textColor="@color/on_boarding_text_color"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/small_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tvRoleHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/role_select_heading"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tvRoleSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/dm_sans_regular"
            android:text="@string/role_select_sub_heading"
            android:textAlignment="center"
            android:textColor="@color/subheading_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/roleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headingContainer">

            <ImageView
                android:id="@+id/ivRoleAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_role_admin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRoleAdminHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/role_admin_heading"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/ivRoleAdmin"
                app:layout_constraintRight_toRightOf="@+id/ivRoleAdmin"
                app:layout_constraintTop_toBottomOf="@+id/ivRoleAdmin" />

            <ImageView
                android:id="@+id/ivRoleTpo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_role_tpo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRoleTpoHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/role_tpo_heading"
                android:textAllCaps="true"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/ivRoleTpo"
                app:layout_constraintRight_toRightOf="@+id/ivRoleTpo"
                app:layout_constraintTop_toBottomOf="@+id/ivRoleTpo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>