<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fillViewport="true"
    tools:context=".home.fragment.jobsFragment.JobDetailFragmentOne">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPopOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:contentDescription="@null"
            android:paddingVertical="@dimen/small_padding"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_tint" />

        <TextView
            android:id="@+id/tvAddJobHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_bold"
            android:paddingVertical="@dimen/small_padding"
            android:text="@string/fragment_job_detail_heading"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/ivPopOut"
            app:layout_constraintLeft_toRightOf="@id/ivPopOut"
            app:layout_constraintTop_toTopOf="@id/ivPopOut" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddJobHeading">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivCompany"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_jobs" />

            <TextView
                android:id="@+id/tvImagePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/small_margin"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/field_upload_company_image"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etJobTitleContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_job_title"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:placeholderText="eg. Product Designer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etJobTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCompanyNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_company_name"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:placeholderText="eg. Google, Amazon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCompanyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCityNameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_city"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:placeholderText="eg. Mumbai">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etSalaryContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_salary"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:prefixText="₹"
                app:hintTextColor="@color/text_color"
                app:placeholderText="eg. 25000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/workTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top|start"
                android:layout_marginVertical="@dimen/medium_margin"
                android:layout_weight="1"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/dm_sans_medium"
                android:hint="@string/field_work_type"
                android:padding="15dp"
                android:textColor="@color/text_color"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="@dimen/small_padding"
                app:spinner_arrow_tint="@color/power_spinner_arrow_tint"
                app:spinner_divider_color="@color/power_spinner_arrow_tint"
                app:spinner_item_array="@array/workType"
                app:spinner_item_height="46dp"
                app:spinner_popup_background="@drawable/spinner_background" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/designationSpinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top|start"
                android:layout_marginVertical="@dimen/medium_margin"
                android:layout_weight="1"
                android:background="@drawable/spinner_background"
                android:fontFamily="@font/dm_sans_medium"
                android:hint="Designation"
                android:padding="15dp"
                android:textColor="@color/text_color"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="@dimen/small_padding"
                app:spinner_item_array="@array/designation"
                app:spinner_arrow_tint="@color/power_spinner_arrow_tint"
                app:spinner_divider_color="@color/power_spinner_arrow_tint"
                app:spinner_item_height="46dp"
                app:spinner_popup_background="@drawable/spinner_background" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etJobDescContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/field_job_description"
                app:boxStrokeColor="@color/box_stroke_color"
                app:errorEnabled="true"
                app:hintTextColor="@color/text_color"
                app:placeholderText="Job Description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etJobDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_medium"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:lines="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:layout_marginVertical="@dimen/medium_margin"
                android:backgroundTint="@color/button_color"
                android:fontFamily="@font/dm_sans_medium"
                android:padding="@dimen/button_padding"
                android:text="@string/field_next"
                android:textColor="@color/button_text_color"
                android:textSize="16sp"
                app:cornerRadius="6dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>