<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.fragment.jobsFragment.JobDetailFragmentTwo">

    <ImageView
        android:id="@+id/ivPopOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin"
        android:contentDescription="@null"
        android:paddingVertical="@dimen/small_padding"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_tint" />

    <TextView
        android:id="@+id/tvAddJobHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_bold"
        android:paddingVertical="@dimen/small_padding"
        android:text="@string/fragment_job_detail_heading"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/ivPopOut"
        app:layout_constraintLeft_toRightOf="@id/ivPopOut"
        app:layout_constraintTop_toTopOf="@id/ivPopOut" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etJobRespContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:hint="@string/field_job_responsibilities"
        app:boxStrokeColor="@color/box_stroke_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddJobHeading"
        app:placeholderText="eg. developing wireframe, management">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etJobResp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSkillsContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/field_skills"
        app:boxStrokeColor="@color/box_stroke_color"
        app:errorEnabled="true"
        app:hintTextColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etJobRespContainer"
        app:placeholderText="eg. Kotlin, Android">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSkills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_medium"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/skillChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:animateLayoutChanges="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSkillsContainer">

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginVertical="@dimen/medium_margin"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/dm_sans_medium"
        android:padding="@dimen/button_padding"
        android:text="@string/field_submit"
        android:textColor="@color/button_text_color"
        android:textSize="16sp"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>